Set width and height on svgs
IE doesn't assume the proper width based on the height, or vice-versa. It resolves to the default svg size (300x150) for the unset dimension. This causes a lot of extra padding around icon svgs in IE. 

Closes https://github.com/vanilla/vanilla/issues/4483

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -5151,6 +5151,7 @@ fieldset[disabled] a.Button {
   fill: #555a62;
   opacity: 0.7;
   height: 1.5rem;
+  width: 1.5rem;
 }
 
 .btn-icon:hover svg {
@@ -5205,6 +5206,7 @@ fieldset[disabled] a.Button {
   fill: #555a62;
   opacity: 0.7;
   height: 1.75rem;
+  width: 1.75rem;
 }
 
 .btn-icon-border:first-child {
@@ -7078,6 +7080,7 @@ label[id^=iCheck] {
 
 .icon-text {
   width: 0.875rem;
+  height: 0.875rem;
   fill: #555a62;
   vertical-align: middle;
 }
