--- a/applications/dashboard/scss/src/_buttons.scss
+++ b/applications/dashboard/scss/src/_buttons.scss
@@ -161,6 +161,7 @@ fieldset[disabled] a.btn {
     fill: $grey-dark;
     opacity: 0.7;
     height: to-rem(24);
+    width: to-rem(24);
   }
 
   &:hover svg {
@@ -185,6 +186,7 @@ fieldset[disabled] a.btn {
     fill: $grey-dark;
     opacity: 0.7;
     height: to-rem($btn-icon-height);
+    width: to-rem($btn-icon-height);
   }
 
   &:first-child {
