--- a/applications/dashboard/scss/src/_toolbar.scss
+++ b/applications/dashboard/scss/src/_toolbar.scss
@@ -59,20 +59,20 @@
   justify-content: space-between;
   padding-top: $spacer / 2;
   padding-bottom: $spacer;
+  padding-right: 0;
 
   > * {
     margin-top: $spacer / 2;
     margin-right: $spacer;
-
-    &:last-child {
-      margin-right: 0;
-    }
   }
 
-  &.flex-wrap {
-    > * {
-      margin-right: 0;
-    }
+  .toolbar-buttons {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .toolbar-btn-group {
+
   }
 
   &:empty {
@@ -116,6 +116,11 @@
   line-height: 1;
   font-weight: 500;
   padding-right: $spacer / 2;
+  white-space: nowrap;
+}
+
+.pager-wrap {
+  margin-left: auto;
 }
 
 .pager {
