--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -7452,6 +7452,7 @@ label[id^=iCheck] {
 
 .modal-footer,
 .modal-header {
+  z-index: 1005;
   padding: 0.75rem 1.125rem;
 }
 
@@ -8161,7 +8162,7 @@ button.close {
 }
 
 .navbar {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 3.75rem;
   z-index: 1;
@@ -8182,12 +8183,14 @@ button.close {
   display: flex;
   -ms-flex-pack: center;
   justify-content: center;
+  margin-top: 3.75rem;
 }
 
 @media (max-width: 991px) {
   .main-row {
     display: block;
     width: 100%;
+    margin-top: 3rem;
   }
 }
 
