--- a/applications/dashboard/scss/src/_toolbar.scss
+++ b/applications/dashboard/scss/src/_toolbar.scss
@@ -95,7 +95,7 @@
 // <div class="pager-wrap">
 //   <div class="pager">
 //     <div class="pager-count">Page 1 of 2</div>
-//     <div class="btn-group">
+//     <nav class="btn-group">
 //       <a href="#" class="disabled btn btn-icon-border" rel="prev" aria-label="Previous page">
 //         <svg class="icon icon-svg-chevron-left" viewBox="0 0 17 17">
 //           <use xlink:href="#chevron-left" />
@@ -106,7 +106,7 @@
 //           <use xlink:href="#chevron-right" />
 //         </svg>
 //       </a>
-//     </div>
+//     </nav>
 //   </div>
 // </div>
 //
