--- a/applications/dashboard/scss/src/_media.scss
+++ b/applications/dashboard/scss/src/_media.scss
@@ -38,7 +38,7 @@
 //         </svg>
 //       </a>
 //     </div>
-//     <div id="media-item-toggle">
+//     <div id="mediaItemToggle">
 //       <span class="toggle-wrap toggle-wrap-on">
 //         <a href="#" aria-label="Disable Media Title">
 //           <div class="toggle-well"></div>
