--- a/applications/dashboard/scss/src/_type.scss
+++ b/applications/dashboard/scss/src/_type.scss
@@ -275,6 +275,7 @@ pre {
     margin-top: 0;
     margin-bottom: 0;
     font-size: to-rem(16);
+    line-height: 1.5;
     font-weight: 500;
   }
 }
