--- a/applications/dashboard/scss/src/_buttons.scss
+++ b/applications/dashboard/scss/src/_buttons.scss
@@ -1,6 +1,9 @@
 // Buttons
 //
-// Find the dashboard button styling here.
+// In the below examples, you'll find markup with either anchor elements or button elements for the buttons.
+// Use a `<button>` element if it's a form element or if the button performs some action on the page
+// (usually with javascript), such as filtering. Use an anchor button if the button opens a new page
+// (either in a modal or by navigating to the new page).
 //
 // Styleguide 4.
 
@@ -13,7 +16,7 @@
 // .btn-link - A button that looks like a link but has the same margins as a button.
 //
 // Markup:
-// <div class="btn {{modifier_class}}">Button</div>
+// <button type="button" class="btn {{modifier_class}}">Button</button>
 //
 // Styleguide 4.1.
 
@@ -136,11 +139,11 @@ fieldset[disabled] a.btn {
 // .btn-icon-border - An icon button with a border
 //
 // Markup:
-// <div class="btn {{modifier_class}}">
+// <button type="button" class="btn {{modifier_class}}">
 //   <svg class="icon icon-svg icon-svg-checkmark" viewBox="0 0 17 17">
 //     <use xlink:href="#checkmark" />
 //   </svg>
-// </div>
+// </button>
 //
 // Styleguide 4.2.
 
@@ -201,9 +204,9 @@ fieldset[disabled] a.btn {
 //
 // Markup:
 // <div class="btn-group">
-//   <div class="btn btn-secondary active">Button 1</div>
-//   <div class="btn btn-secondary">Button 2</div>
-//   <div class="btn btn-secondary">Button 3</div>
+//   <button type="button" class="btn btn-secondary active">Button 1</button>
+//   <button type="button" class="btn btn-secondary">Button 2</button>
+//   <button type="button" class="btn btn-secondary">Button 3</button>
 // </div>
 //
 // Styleguide 4.3.
@@ -271,12 +274,12 @@ fieldset[disabled] a.btn {
 // Small Rounded Button
 //
 // Markup:
-// <div class="btn btn-sm-rounded">
+// <a class="btn btn-sm-rounded" href="#">
 //   Check it out
 //   <svg class="icon icon-svg icon-svg-external-link icon-12 icon-text" viewBox="0 0 17 17">
 //     <use xlink:href="#external-link" />
 //   </svg>
-// </div>
+// </a>
 //
 // Styleguide 4.4.1.
 
@@ -288,12 +291,12 @@ fieldset[disabled] a.btn {
 // Navbar button
 //
 // Markup:
-// <div class="btn btn-navbar">
+// <a class="btn btn-navbar" href="#">
 //   Check it out
 //   <svg class="icon icon-svg icon-svg-external-link icon-12" viewBox="0 0 17 17">
 //     <use xlink:href="#external-link" />
 //   </svg>
-// </div>
+// </a>
 //
 // Styleguide 4.4.2.
 
