Add and implement rendering functions for search forms
Adds and implements rendering functions for search forms.
Only renders a clear button if a query has been performed.

--- a/applications/dashboard/scss/src/_buttons.scss
+++ b/applications/dashboard/scss/src/_buttons.scss
@@ -98,6 +98,7 @@ fieldset[disabled] a.btn {
   font-weight: normal;
   color: $link-color;
   border-radius: 0;
+  border-width: 0;
 
   &,
   &:active,
@@ -154,7 +155,8 @@ fieldset[disabled] a.btn {
   margin: 0;
   margin-left: .5rem;
   font-size: $font-size-sm;
-  line-height: to-rem(24);
+  line-height: 1;
+  border-width: 0;
 
   &:first-child {
     margin-left: 0;
