--- a/applications/dashboard/scss/src/_type.scss
+++ b/applications/dashboard/scss/src/_type.scss
@@ -209,7 +209,8 @@ pre {
 // Header Menu Tabs
 //
 // Handles hiding and showing content that exists on a single page. This doesn't have any javascript rigged up
-// for it yet. Custom Theme is the only place it's used and the javascript functionality only exists in that plugin's js.
+// for it yet. Custom Theme is the only place it's used and the javascript functionality only exists in that plugin's
+// javascript file.
 //
 // Markup:
 // <div class="header-menu" role="tablist">
