Tweak category settings page
Reset button styling, remove unused css rules, and add trigger properties to twbs view.

--- a/applications/dashboard/scss/legacy/_category-settings.scss
+++ b/applications/dashboard/scss/legacy/_category-settings.scss
@@ -34,7 +34,8 @@
     position: absolute;
     top: 0;
     left: 30px;
-    padding: 6px;
+    padding: 10px;
+    line-height: 1;
     cursor: pointer;
 
     &:active,
@@ -45,24 +46,18 @@
   }
 
   .options {
-    float: right;
+    position: absolute;
+    top: 0;
+    right: 0;
     fill: $icon-color;
-    //margin-top: -$tree-padding - 1px;
-    //margin-right: -$tree-padding;
-  }
 
-  .OptionsTitle {
-    display: inline-block;
-    padding-right: 2px;
-    line-height: 1;
-  }
-  .Button-Options {
-    padding: $tree-icon-padding;
-  }
+    .dropdown-toggle {
+      padding: to-rem(6) to-rem(10);
+      line-height: to-rem(22);
+    }
 
-  .ToggleFlyout {
-    .Flyout {
-      top: $tree-item-height - $tree-icon-padding + 2px;
+    svg {
+      height: to-rem(16);
     }
   }
 }
@@ -90,6 +85,7 @@
   border-radius: 2px;
   padding: 6px 9px 6px 60px;
   margin: 3px 0;
+  line-height: 22px;
 }
 
 .dd-dragel {
@@ -115,11 +111,6 @@
   min-height: $tree-item-height;
   border-radius: 2px;
   cursor: grabbing;
-}
-
-.SpFlyoutHandle,
-.DropHandle {
-  border-top-color: $icon-color;
 }
 
 .bigcrumbs {
