SCSS, js, and view tweaks
Add back button to add/edit category header.
Make theme link an external link icon.
Tweak spacing on table icons.
Make control panel heading an h2 element.
Tweak spacing.

--- a/applications/dashboard/scss/src/_card.scss
+++ b/applications/dashboard/scss/src/_card.scss
@@ -8,7 +8,7 @@
 // user dropdown in the navbar. A card's width will expand or contract based on the size of the container it's in.
 //
 // Markup:
-// <div class="card card-user {{modifier_class}}">
+// <div class="card card-user">
 //   <div class="card-block media media-sm">
 //     <div class="media-left">
 //       <div class="media-image-wrap">
