--- a/applications/dashboard/scss/src/_forms.scss
+++ b/applications/dashboard/scss/src/_forms.scss
@@ -575,6 +575,18 @@ select + select {
   .title {
     text-align: center;
     font-weight: 500;
+
+    a {
+      @extend .reverse-link;
+
+      &:hover {
+        text-decoration: none;
+
+        svg {
+          fill: $brand-primary;
+        }
+      }
+    }
   }
 
   .image-wrap {
